<resources>
    <string name="app_name" translatable="false">Knitting Counter</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Your projects</string>
    <string name="menu_view_project">Project</string>
    <string name="menu_new_project">New project</string>
    <string name="menu_edit_project">Edit project</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_stopwatch">Stopwatch</string>

    <string name="action_settings">Settings</string>

    <string name="btn_reset">Reset</string>
    <string name="btn_amount">Amount</string>
    <string name="btn_new_project">Create</string>
    <string name="btn_retry">Retry</string>
    <string name="btn_clean">Clean</string>
    <string name="btn_bar_save">Save</string>
    <string name="btn_bar_update">Update</string>
    <string name="btn_bar_delete">Delete</string>
    <string name="btn_bar_edit">Edit</string>
    <string name="btn_bar_gallery">Gallery</string>
    <string name="btn_counter_screen">Go to counter</string>
    <string name="btn_timer_screen">Go to stopwatch</string>

    <string name="new_project_name">Project</string>
    <string name="new_project_name_placeholder">Enter the name of the project</string>
    <string name="new_project_needle_placeholder">Insert the needle number</string>

    <string name="title_dialog_delete">Deleting…</string>
    <string name="title_activity_splashscreen">Welcome</string>
    <string name="title_exit_app">Are you sure you want to leave?</string>
    <string name="title_cancel_new_project">Canceling project…</string>

    <string name="label_updating_data">Updating data</string>
    <string name="label_img_camera">Take a picture from camera</string>
    <string name="label_img_gallery">Select photo from gallery</string>
    <string name="label_updating">Updating</string>
    <string name="label_close_snackbar">Close</string>
    <string name="label_new_project_ok">Project created successfully</string>
    <string name="label_needle">Needle</string>
    <string name="label_dialog_delete">Are you sure you want to delete this project?</string>
    <string name="label_update_project_ok">Changes saved successfully</string>
    <string name="label_hold_btn_reset">Press and hold the button to reset the project counter</string>
    <string name="label_cancel_new_project">If you go out, you will lose the changes you have made. Do you want to continue?</string>
    <string name="label_counter_screen">Counter</string>
    <string name="label_timer_screen">Stopwatch</string>

    <string name="default_project_name">Default project name</string>

    <string name="error_image_new_project">A problem has occurred…</string>
    <string name="error_new_project">Cannot create the project</string>
    <string name="error_new_project_already_exists">A project with that name already exists</string>
    <string name="error_permissions_new_project">Check the app\'s permissions to do this…</string>
    <string name="error_delete_project">Error deleting the project…</string>

    <string name="dialog_choose_action_title">Choose an action</string>
</resources>
