<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/menu_home">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_home"
                    android:checked="true"
                    android:icon="@drawable/ic_library_books_black_24dp"
                    android:title="@string/menu_home" />
                <item
                    android:id="@+id/nav_new_project"
                    android:icon="@drawable/ic_library_add_black_24dp"
                    android:title="@string/menu_new_project" />
            </group>
        </menu>
    </item>

    <item android:title="@string/app_name">
        <menu>
            <item
                android:id="@+id/exit"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/menu_exit" />
        </menu>
    </item>
    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>-->

</menu>
